pages/index.css
@import url(../vendor/normalize.css);
@import url(../vendor/fonts/fonts.css);

.page {
  background-color: #000000;
  color: white;
  margin: 0;
}

.page__container {
  width: calc(100% - 400px);
  min-width: 320px;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  padding: 45px 0 60px;
}

@media screen and (max-width: 1024px) {
  .page__container {
    width: calc(100% - 160px);
  }
}

@media screen and (max-width: 768px) {
  .page__container {
    width: 100%;
    padding: 28px 0 0;
  }
}

@media screen and (max-width: 768px) {
  .page__content {
    padding: 0 19px;
  }
}

@media screen and (max-width: 768px) {
  .page__footer {
    padding: 0 19px 36px;
  }
}
.header {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  min-height: 74px;
  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
}

@media screen and (max-width: 768px) {
  .header {
    padding-left: 27px;
  }
}

.logo {
}

.logo__image {
  width: 142px;
  height: 33px;
}

.content {
}

.page__content {
  margin-top: 40px;
}

.profile {
  display: flex;
  align-items: center;
  width: 100%;

  justify-content: flex-start;
}

@media screen and (max-width: 768px) {
  .profile {
    flex-direction: column;
  }
}

.avatar {
  flex-basis: 120px;
  width: 120px;
  height: 120px;
}
@media screen and (min-width: 1280px) {
  .avatar {
    min-width: 120px;
    min-height: 120px;
  }
}

.avatar__image {
  border-radius: 50%;
  width: 100%;
  height: 100%;
}

.profile__info {
  display: grid;
  grid-template-areas:
    "name button"
    "bio bio";
  gap: 16px 18px;
  margin: 0 30px;
  flex-shrink: 1;
}

@media screen and (max-width: 1024px) {
  .profile__info {
    margin: 0 10px;
  }
}

@media screen and (max-width: 768px) {
  .profile__info {
    gap: 14px 10px;
    margin: 26px auto 36px;
    /* grid-template-areas: */
    /* "name name" */
    /* "bio bio"; */
  }
}
.profile__text {
}
.profile__name {
  grid-area: name;
  margin: 0 auto;
  padding: 0;
  font-family: "Inter", Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: 42px;
  line-height: 48px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

@media screen and (max-width: 768px) {
  .profile__name {
    margin-left: 24px;
    /* text-align: center; */
    font-size: 27px;
    line-height: 33px;
  }
}

.profile__bio {
  grid-area: bio;
  margin: 0;
  font-family: "Inter", Helvetica, Arial, sans-serif;
  font-size: 18px;
  line-height: 22px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

@media screen and (max-width: 768px) {
  .profile__bio {
    font-size: 14px;
    line-height: 17px;
    text-align: center;
  }
}

.profile__edit-button {
  grid-area: button;
  width: 24px;
  height: 24px;
  background-color: black;
  background-image: url("../images/edit-button.svg");
  padding: 0;
  background-position: center;
  background-repeat: no-repeat;
  align-self: center;
  border: 1px solid #ffffff;
  box-sizing: border-box;
}

@media screen and (max-width: 768px) {
  .profile__edit-button {
    width: 18px;
    height: 18px;
  }
}
.add-button {
  width: 150px;
  height: 50px;
  border: 2px solid #ffffff;
  box-sizing: border-box;
  border-radius: 2px;
  background-image: url("../images/add-button.svg");
  padding: 0;
  background-position: center;
  background-repeat: no-repeat;
  background-color: black;
  margin-left: auto;
  flex-shrink: 3;
  /* position: absolute; */
  /* right: 0; */
}

@media screen and (max-width: 768px) {
  .add-button {
    width: 100%;
    margin: 0 auto;
  }
}
@media screen and (min-width: 1280px) {
  .add-button {
    min-width: 150px;
    min-height: 50px;
  }
}

.photos {
}

.places {
  margin: 0;
  padding: 50px 0 66px;
  display: grid;
  grid-template: repeat(2, 1fr) / repeat(3, 1fr);
  gap: 20px 17px;
}

@media screen and (max-width: 1024px) {
  .places {
    grid-template-rows: repeat(auto-fit, 1fr);
    grid-template-columns: repeat(2, 1fr);
    padding: 36px 0 48px;
    row-gap: 20px;
  }
}

@media screen and (max-width: 568px) {
  .places {
    grid-template-rows: repeat(auto-fit, 1fr);
    grid-template-columns: 1fr;
    padding: 36px 0 48px;
    row-gap: 20px;
  }
}

.place {
  margin: 0;
  padding: 0;
  border-radius: 10px;
  list-style-type: none;
  background-color: white;
  box-sizing: border-box;
  overflow: hidden;
  width: 100%;
  display: flex;
  flex-direction: column;
}

.place__container {
  /* width: 100%; */
  /* height: 100%; */
  /* background-image: url(../images/1_tiny.jpg); */
  /* background-position: center;
  background-repeat: no-repeat; */
  /* object-fit: contain; */
  /* background-color: white;
  color: black;
  border-radius: 10px; */
}

.place__photo {
  border-radius: 10px 10px 0 0;
  width: 100%;
}

.place__info {
  width: 87%;
  margin: 25px auto 31px;
  display: flex;
  justify-content: space-between;
}

.place__title {
  margin: 0;
  padding: 0;
  font-family: "Inter", Helvetica, Arial, sans-serif;
  font-weight: 900;
  font-size: 24px;
  line-height: 29px;
  color: #000000;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}
.place__like {
  border-style: none;
  width: 22px;
  flex-basis: 22px;
  flex-shrink: 0;
  background-image: url(../images/like-button.svg);
  background-repeat: no-repeat;
  background-position: center;
  object-fit: cover;
  background-color: transparent;
}

.place__like:hover {
  opacity: 0.5;
  cursor: pointer;
}

.place__like_active {
  background-image: url(../images/like-button-active.svg);
}

.popup {
  display: none;
  flex-direction: column;
  justify-content: flex-start;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
}

.popup__container {
  position: relative;
  display: flex;
  flex-direction: column;
  background-color: #fff;
  border-radius: 10px;
  width: 33.6%;
  top: 195px;
  padding: 36px;
  margin: 0 auto;
  box-sizing: border-box;
}

.popup__close {
  width: 40px;
  height: 40px;
  border: none;
  position: absolute;
  top: -48px;
  right: -48px;
  background-image: url("../images/close-button.svg");
  padding: 0;
  background-position: center;
  background-repeat: no-repeat;
  background-color: transparent;
}

.popup__title {
  margin: 0;
  margin-bottom: 54px;
  padding: 0;
  font-family: "Inter", Helvetica, Arial, sans-serif;
  font-weight: 900;
  font-size: 24px;
  line-height: 29px;

  color: #000000;
}

.popup__form {
}

.form__input {
  border: none;
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  width: 100%;
  font-family: "Inter", Helvetica, Arial, sans-serif;
  font-size: 14px;
  line-height: 17px;
  margin-bottom: 30px;
  color: #000000;
  padding: 10px 4px 13px;
  box-sizing: border-box;
}

.form__input:last-of-type {
  margin: 0;
}

.popup__save {
  font-family: "Inter", Helvetica, Arial, sans-serif;
  font-size: 18px;
  line-height: 22px;
  text-align: center;
  background: #000000;
  border-radius: 2px;
  color: #ffffff;
  height: 50px;
  padding: 0;
  margin-top: 48px;
  width: 100%;
}

.popup__save:hover {
  opacity: 0.8;
  cursor: pointer;
}

.popup_opened {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.footer {
}

.footer__copyright {
  font-family: "Inter", Helvetica, Arial, sans-serif;
  font-size: 18px;
  line-height: 22px;
  color: #545454;
}

@media screen and (max-width: 768px) {
  .footer__copyright {
    font-size: 14px;
    line-height: 17px;
  }
}
.hover {
  transition: opacity 0.2s ease;
}

.hover:hover {
  opacity: 0.6;
  cursor: pointer;
}

